--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arias-tale-rpg",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -22,10 +22,14 @@
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "gray-matter": "^4.0.3",
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^9.0.1",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "superjson": "^2.2.1",
     "zod": "^3.22.4"
   },
