--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.6.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^4.36.1",
@@ -24,6 +25,8 @@
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "gray-matter": "^4.0.3",
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
@@ -33,6 +36,8 @@
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
