feat: google auth

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,7 @@ NEXTAUTH_URL="http://localhost:3000"
 # Next Auth Discord Provider
 DISCORD_CLIENT_ID=""
 DISCORD_CLIENT_SECRET=""
+# see: https://dev.to/hqasmei/setting-up-the-google-provider-in-t3-stack-1kjf
+GOOGLE_CLIENT_ID="foobar.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET=""
+
