--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-markdown": "^9.0.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "stripe": "^15.11.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
