--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gray-matter": "^4.0.3",
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
+    "phaser": "^3.80.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^9.0.1",
